# sqlc-rust-postgres

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  README.md  _sqlc.json  build.rs  compose.yaml  query.sql  rust-toolchain.toml  schema.sql  sqlc.json  sqlc_dev.json
.devcontainer/: devcontainer.json
.github/workflows/: pull_request.yaml
docs/: architectural-refactoring.md  column-name-simplification.md  column-naming-implementation.md  improve-error-messages.md  struct-based-api.md  struct-based-query-api.md
examples/authors/: Cargo.toml
examples/authors/src/: lib.rs  performance_test.rs  queries.rs  query.sql  schema.sql  test_type_state.rs
examples/booktest/: Cargo.toml
examples/booktest/src/: lib.rs  queries.rs  query.sql  schema.sql
examples/complex_queries/: Cargo.toml
examples/complex_queries/src/: lib.rs  queries.rs  query.sql  schema.sql
examples/custom_type/: Cargo.toml
examples/custom_type/src/: lib.rs  queries.rs  query.sql  schema.sql
examples/jets/: Cargo.toml
examples/jets/src/: lib.rs  queries.rs  query.sql  schema.sql
examples/ondeck/: Cargo.toml
examples/ondeck/schema/: 0002_venue.sql
examples/ondeck/src/: lib.rs  queries.rs
examples/test-utils/: Cargo.toml
examples/test-utils/src/: lib.rs
src/: client.rs  codegen.rs  const_query.rs  error.rs  lib.rs  main.rs  query.rs  sqlc.rs  sqlc_annotation.rs  user_type.rs  utils.rs
src/db_support/: column_types.rs  crate_types.rs  mod.rs
src/protos/plugin/: codegen.proto
src/rust_gen/: builder_gen.rs  const_gen.rs  func_gen.rs  mod.rs  naming.rs  param_gen.rs  struct_api_gen.rs  struct_gen.rs
