[package]
name = "sqlc-rust-postgres"
version = "0.1.4"
edition = "2024"
authors = ["tunamaguro"]
license = "MIT OR Apache-2.0"

[dependencies]
convert_case = { version = "0.8.0", default-features = false }
prost = { version = "0.13" }

prettyplease = { version = "0.2" }
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = { version = "2", default-features = false, features = [
    "printing",
    "full",
    "parsing",
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex-lite = "0.1.6"


[build-dependencies]
prost-build = "0.13"

[workspace]
members = ["examples/*"]

[workspace.dependencies]
postgres = { version = "0.19" }
tokio-postgres = { version = "0.7.13" }
deadpool-postgres = { version = "0.14" }
postgres-types = { version = "0.2.9", features = ["derive"] }
test-context = "0.4.1"
tokio = { version = "1.44.0", features = ["full"] }
test-utils = { path = "./examples/test-utils" }
