[package]
name = "custom_type"
version = "0.1.0"
edition = "2021"

[dependencies]
postgres = { workspace = true }
tokio-postgres = { workspace = true }
postgres-types = { workspace = true }
rust_decimal = { version = "1.36.0", features = ["db-postgres"] }
postgres_money = { version = "0.4.1", features = ["sql"] }

[dev-dependencies]
tokio = { workspace = true }
test-utils = { workspace = true }
test-context = { workspace = true }
